Fixed calc on collapsed data, added light color to /light

--- a/styles/simple.css
+++ b/styles/simple.css
@@ -1864,6 +1864,6 @@ body {
 }
 
 .desc:hover .tooltippic {
-  visibility: visible;
+  /* visibility: visible; */
 }
 
